✔️  fixed delete button on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -204,8 +204,8 @@ label:hover {
 
 .backdrop button {
   position: absolute;
-  top: 60px;
-  right: 30px;
+  top: 10px;
+  right: 5px;
   font-size: 1rem;
   padding: 0.5rem 1rem;
   border: 2px solid var(--error);
